--- a/int/css/carousel.sass
+++ b/int/css/carousel.sass
@@ -4,26 +4,6 @@
 	width: 100%
 	height: 100%
 
-
-	.swiper-slide
-		text-align: center
-		font-size: 18px
-
-
-		/* Center slide text vertically */
-		display: -webkit-box
-		display: -ms-flexbox
-		display: -webkit-flex
-		display: flex
-		-webkit-box-pack: center
-		-ms-flex-pack: center
-		-webkit-justify-content: center
-		justify-content: center
-		-webkit-box-align: center
-		-ms-flex-align: center
-		-webkit-align-items: center
-		align-items: center
-
 	.swiper-slide img
 		display: block
 		width: 100%
@@ -44,7 +24,6 @@
 	.swiper-pagination-bullet-active
 		background: $mainColor
 		margin: 0
-
 
 //<!--Section-intro-->
 .section-intro
